# mem0

./: pyproject.toml
examples/misc/: personal_assistant_memory_backup.py
mem0/memory/: main.py
mem0/vector_stores/: chroma.py  configs.py
