[project]
name = "mem0ai"
version = "0.1.93"
description = "Long-term memory for AI Agents"
authors = [
  { name = "Mem0", email = "founders@mem0.ai" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
# The following directories are excluded from build via .gitignore or MANIFEST.in if needed:
# db, configs, notebooks, embedchain, evaluation, mem0-ts, examples, vercel-ai-sdk, docs

# If you want to specify which packages to include, use include/exclude in MANIFEST.in or setup.cfg

dependencies = [
    "qdrant-client>=1.9.1,<2.0.0",
    "pydantic>=2.7.3,<3.0.0",
    "openai>=1.33.0,<2.0.0",
    "posthog>=3.5.0,<4.0.0",
    "pytz>=2024.1,<2025.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "langchain-neo4j>=0.4.0,<0.5.0",
    "neo4j>=5.23.1,<6.0.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "langchain-memgraph>=0.1.1,<0.2.0",
    "chromadb>=1.0.7",
]


[project.optional-dependencies]
graph = [
    "langchain-neo4j",
    "neo4j",
    "rank-bm25",
    "langchain-memgraph"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["mem0"]

[tool.ruff]
line-length = 120
exclude = ["embedchain/"]
